# MCP-OPENAPI-Pandoc

./: .env.example  .gitignore  Dockerfile  Dockerfile.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: README.md  pipeline.yml  publish-container.yml  test-publish.yml
docs/: API.md  CONTAINER_REGISTRY.md  MCP.md
scripts/: export_openapi.py  test_api.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  routes.py  schemas.py
src/auth/: __init__.py  bearer.py  dependencies.py
src/core/: __init__.py  converter.py  exceptions.py  formats.py
src/mcp/: __init__.py  server.py  tools.py
src/middleware/: __init__.py  rate_limit.py  tracing.py
templates/: .gitkeep
tests/: __init__.py  conftest.py  test_api.py  test_mcp.py
